--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -9,6 +9,6 @@
     <main>
         <h1>Welcome to the Harb Kim Empire</h1>
     </main>
-    <p align="center"><a href=login ><button class=grey style="height:75px;width:150px">login with spotify</button></a></p>
+    <p align="center"><a href=logout ><button class=grey style="height:75px;width:150px">login with spotify</button></a></p>
   </body>
 </html>
