--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <main>
-        <h1>Welcome to the Harb Kim Empire</h1>
+        <h1>You have entered the Harb Kim Empire.</h1>
     </main>
-    <p align="center"><a href=logout ><button class=grey style="height:75px;width:150px">login with spotify</button></a></p>
+    <p align="center"><a href=logout ><button class=grey style="height:75px;width:150px">leave Empire</button></a></p>
   </body>
 </html>
