adding input box. no real function attached to submit yet

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -9,5 +9,10 @@
     <main>
         <h1>You have entered the Empire, {{ displayname }}.</h1>
     </main>
+    <form method="POST" action="/getinput"">
+      <label for="user_input">Enter text:</label>
+      <input type="text" id="user_input" name="user_input">
+      <input type="submit" value="Submit">
+  </form>
   </body>
 </html>
