--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -11,7 +11,7 @@
     </main>
     <form method="POST" action="/getinput"">
       <label for="user_input">Enter text:</label>
-      <input type="text" id="user_input" name="user_input">
+      <input type="text" id="user_input" name="user_input" maxlength="60">
       <input type="submit" value="Submit">
   </form>
   </body>
