--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <main>
-        <h1>You have entered the Harb Kim Empire.</h1>
+        <h1>You have entered the Empire, {{ displayname }}.</h1>
     </main>
     <form method="POST" action="/getinput"">
       <label for="user_input">Enter text:</label>
