--- a/react/src/App.css
+++ b/react/src/App.css
@@ -1,4 +1,11 @@
 .App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 75vh;
+
+}
+.center-content{
   text-align: center;
 }
 
@@ -14,7 +21,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #154cbc;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -25,7 +32,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #17008b;
 }
 
 @keyframes App-logo-spin {
