--- a/react/src/App.css
+++ b/react/src/App.css
@@ -48,6 +48,8 @@
   font-family: 'Chango';
 }
 
+
+
 body{
   margin: 0;
   padding: 0;
@@ -55,6 +57,7 @@ body{
   background-image: linear-gradient(80deg, rgb(5, 124, 172), rgb(199, 10, 114)); 
   overflow: hidden;
   font-family: 'poppins';
+  
 
 }
 #up{
@@ -65,6 +68,7 @@ body{
   background-image: linear-gradient(80deg, rgb(5, 124, 172), rgb(178, 17, 214));
   filter: blur(80px);
   animation: down 40s infinite;
+  z-index: -1; 
 }
 #down{
    position: absolute;
@@ -75,15 +79,17 @@ body{
    background-image: linear-gradient(80deg, rgba(245, 207, 82, 0.8), rgba(199, 10, 114));
    filter: blur(80px);
    animation: up 30s infinite;
+   z-index: -1; 
 }
 #left{
    position: absolute;
    height: 500px;
    width: 500px;
    border-radius: 50%;
-   background-image: linear-gradient(80deg, rgb(5, 124, 172), rgba(183, 253, 52, 0.8));
+   background-image: linear-gradient(80deg, rgb(255,174,44), rgb(253,143,117), rgb(247,111,193),rgb(159,106,178)); 
    filter: blur(80px);
    animation: left 40s 1s infinite;
+   z-index: -1; 
 }
 #right{
    position: absolute;
@@ -93,6 +99,7 @@ body{
    background-image: linear-gradient(80deg, rgba(64, 238, 125, 0.6), rgba(255, 118, 209, 0.8));
    filter: blur(80px);
    animation: right 40s .5s infinite;
+   z-index: -1; 
 }
 
 @keyframes down{
@@ -130,4 +137,3 @@ body{
        right: 1300px;
    }
 }
-
