--- a/react/src/App.scss
+++ b/react/src/App.scss
@@ -1,140 +1,199 @@
-.App {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 75vh;
 
-}
-.center-content{
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@700&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+body {
+    font-family: 'Dongle', sans-serif;
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    overflow: hidden;
   }
-}
-
-.App-header {
-  background-color: #154cbc;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #17008b;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.font-loader {
-  font-family: 'Chango';
-}
-
-
-/*
-body{
-  margin: 0;
-  padding: 0;
-  min-height: 100vh;
-  background-image: linear-gradient(80deg, rgb(5, 124, 172), rgb(199, 10, 114)); 
-  overflow: hidden;
-  font-family: 'poppins';
   
-
+.text-container {
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    justify-content: center;
+    align-items: center;
+    font-size: 80px;
+    color: white;
+    opacity: 0.8;
+    user-select: none;
+    text-shadow: 1px 1px rgba(0,0,0,0.1);
+    flex-direction: column;
 }
-#up{
-  position: absolute;
-  height: 800px; 
-  width: 800px;
-  border-radius: 50%;
-  background-image: linear-gradient(80deg, rgb(5, 124, 172), rgb(178, 17, 214));
-  filter: blur(80px);
-  animation: down 40s infinite;
-  z-index: -1; 
-}
-#down{
-   position: absolute;
-   right: 0;
-   height: 500px;
-   width: 500px;
-   border-radius: 50%;
-   background-image: linear-gradient(80deg, rgba(245, 207, 82, 0.8), rgba(199, 10, 114));
-   filter: blur(80px);
-   animation: up 30s infinite;
-   z-index: -1; 
-}
-#left{
-   position: absolute;
-   height: 500px;
-   width: 500px;
-   border-radius: 50%;
-   background-image: linear-gradient(80deg, rgb(255,174,44), rgb(253,143,117), rgb(247,111,193),rgb(159,106,178)); 
-   filter: blur(80px);
-   animation: left 40s 1s infinite;
-   z-index: -1; 
-}
-#right{
-   position: absolute;
-   height: 500px;
-   width: 500px;
-   border-radius: 50%;
-   background-image: linear-gradient(80deg, rgba(64, 238, 125, 0.6), rgba(255, 118, 209, 0.8));
-   filter: blur(80px);
-   animation: right 40s .5s infinite;
-   z-index: -1; 
+.text-container p{
+  margin:0;
+  font-size: 50px;
 }
 
-@keyframes down{
-   0%, 100%{
-       top: -100px;  
-   }
-   70%{
-       top: 700px;
-   }
+.text-container h1{
+  margin:0;
+}
+  
+:root {
+    --color-bg1: rgb(108, 0, 162);
+    --color-bg2: rgb(0, 17, 82);
+    --color1: 18, 113, 255;
+    --color2: 221, 74, 255;
+    --color3: 100, 220, 255;
+    --color4: 200, 50, 50;
+    --color5: 180, 180, 50;
+    --color-interactive: 140, 100, 255;
+    --circle-size: 80%;
+    --blending: hard-light;
 }
 
-@keyframes up{
-   0%, 100%{
-       bottom: -100px;  
-   }
-   70%{
-       bottom: 700px;
-   }
-}
-
-@keyframes left{
-   0%, 100%{
-       left: -100px;  
-   }
-   70%{
-       left: 1300px;
-   }
-}
-
-@keyframes right{
-   0%, 100%{
-       right: -100px;  
-   }
-   70%{
-       right: 1300px;
-   }
-}
-*/
+  @keyframes moveInCircle {
+    0% {
+      transform: rotate(0deg);
+    }
+    50% {
+      transform: rotate(180deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+  @keyframes moveVertical {
+    0% {
+      transform: translateY(-50%);
+    }
+    50% {
+      transform: translateY(50%);
+    }
+    100% {
+      transform: translateY(-50%);
+    }
+  }
+  
+  @keyframes moveHorizontal {
+    0% {
+      transform: translateX(-50%) translateY(-10%);
+    }
+    50% {
+      transform: translateX(50%) translateY(10%);
+    }
+    100% {
+      transform: translateX(-50%) translateY(-10%);
+    }
+  }
+  
+  .gradient-bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: linear-gradient(40deg, var(--color-bg1), var(--color-bg2));
+    top: 0;
+    left: 0;
+  
+    svg {
+      display: none;
+    }
+  
+    .gradients-container {
+      filter: url(#goo) blur(40px) ;
+      width: 100%;
+      height: 100%;
+    }
+  
+    .g1 {
+      position: absolute;
+      background: radial-gradient(circle at center, rgba(var(--color1), 0.8) 0, rgba(var(--color1), 0) 50%) no-repeat;
+      mix-blend-mode: var(--blending);
+  
+      width: var(--circle-size);
+      height: var(--circle-size);
+      top: calc(50% - var(--circle-size) / 2);
+      left: calc(50% - var(--circle-size) / 2);
+  
+      transform-origin: center center;
+      animation: moveVertical 30s ease infinite;
+  
+      opacity: 1;
+    }
+  
+    .g2 {
+      position: absolute;
+      background: radial-gradient(circle at center, rgba(var(--color2), 0.8) 0, rgba(var(--color2), 0) 50%) no-repeat;
+      mix-blend-mode: var(--blending);
+  
+      width: var(--circle-size);
+      height: var(--circle-size);
+      top: calc(50% - var(--circle-size) / 2);
+      left: calc(50% - var(--circle-size) / 2);
+  
+      transform-origin: calc(50% - 400px);
+      animation: moveInCircle 20s reverse infinite;
+  
+      opacity: 1;
+    }
+  
+    .g3 {
+      position: absolute;
+      background: radial-gradient(circle at center, rgba(var(--color3), 0.8) 0, rgba(var(--color3), 0) 50%) no-repeat;
+      mix-blend-mode: var(--blending);
+  
+      width: var(--circle-size);
+      height: var(--circle-size);
+      top: calc(50% - var(--circle-size) / 2 + 200px);
+      left: calc(50% - var(--circle-size) / 2 - 500px);
+  
+      transform-origin: calc(50% + 400px);
+      animation: moveInCircle 40s linear infinite;
+  
+      opacity: 1;
+    }
+  
+    .g4 {
+      position: absolute;
+      background: radial-gradient(circle at center, rgba(var(--color4), 0.8) 0, rgba(var(--color4), 0) 50%) no-repeat;
+      mix-blend-mode: var(--blending);
+  
+      width: var(--circle-size);
+      height: var(--circle-size);
+      top: calc(50% - var(--circle-size) / 2);
+      left: calc(50% - var(--circle-size) / 2);
+  
+      transform-origin: calc(50% - 200px);
+      animation: moveHorizontal 40s ease infinite;
+  
+      opacity: 0.7;
+    }
+  
+    .g5 {
+      position: absolute;
+      background: radial-gradient(circle at center, rgba(var(--color5), 0.8) 0, rgba(var(--color5), 0) 50%) no-repeat;
+      mix-blend-mode: var(--blending);
+  
+      width: calc(var(--circle-size) * 2);
+      height: calc(var(--circle-size) * 2);
+      top: calc(50% - var(--circle-size));
+      left: calc(50% - var(--circle-size));
+  
+      transform-origin: calc(50% - 800px) calc(50% + 200px);
+      animation: moveInCircle 20s ease infinite;
+  
+      opacity: 1;
+    }
+    
+    .interactive {
+      position: absolute;
+      background: radial-gradient(circle at center, rgba(var(--color-interactive), 0.8) 0, rgba(var(--color-interactive), 0) 50%) no-repeat;
+      mix-blend-mode: var(--blending);
+  
+      width: 100%;
+      height: 100%;
+      top: -50%;
+      left: -50%;
+  
+      opacity: 0.7;
+    }
+  }
+  
