--- a/react/src/Home.scss
+++ b/react/src/Home.scss
@@ -3,9 +3,13 @@
 .form-container {
     display: flex;
     align-items: center;
+    margin: 30px;
+    padding: 30px;
+    width: 100%;
 }
   
 .input-bar {
+    width:100%;
     opacity: 50%;
     border: 1px solid #ccc;
     border-radius: 50px;
@@ -20,5 +24,20 @@
     padding:18px;
     outline: none;
     border: none;
+}
+
+.home-greeting{
+    font-size: 40px;
+}
+
+//chat box styling
+.chat-box{
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    border-radius: 50px;
+    height:80%;
+    width: 50%;
+    background-color:rgba(65, 37, 82, 0.667);
 }
   
