updating chat box styling, incomplete

--- a/react/src/Home.scss
+++ b/react/src/Home.scss
@@ -1,11 +1,11 @@
-
-//message bar styling
 .form-container {
     display: flex;
     align-items: center;
-    margin: 30px;
-    padding: 30px;
-    width: 45%;
+    margin: 0 auto;
+    padding: 20px 20px 30px 20px;
+    width: 50%;
+    background-color:rgba(39, 22, 49, 0.667);
+    border-radius: 0px 0px 50px 50px;
 }
 
 .input-bar {
@@ -30,37 +30,82 @@
     font-size: 40px;
 }
 
-//chat box styling
+.chat-top-bar{
+    background-color:rgba(39, 22, 49, 0.667);
+    border-radius: 50px 50px 0px 0px;
+    width: 50%;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.chat-top-bar #text{
+    font-size: 30px;
+    padding-left:10px;
+}
+
+//chatbox
+
 .chat-box{
-    display: flex;
-    border-radius: 50px;
     height:80%;
     width: 50%;
-    align-items: flex-end;
     background-color:rgba(65, 37, 82, 0.667);
     overflow-y: hidden;
+    margin: 0 auto;
+    padding: 20px;
+    overflow-y: scroll;
     
 }
 
+::-webkit-scrollbar {
+    width: 20px;
+    padding:0px;
+}
+ 
+::-webkit-scrollbar-track {
+   
+    border-radius: 10px;
+}
+  
+::-webkit-scrollbar-thumb {
+    background: rgba(39, 22, 49, 0.3335);
+    border-radius: 10px;
+}
+ 
 .message-cont{
-    max-width: 50%;
-    word-wrap: break-word;
-}
-
-.message-cont #message-user{
-    display:flex;
-    font-size: 30%;
-    background-color: #ccc;
-    border-radius: 40px 40px 40px 10px;
-    max-width: 100%;
-    margin: 20px 20px 20px 20px;
-    padding: 30px 30px 30px 30px;
-    justify-self: right;
-    
+    //width: 100%;
+    //word-wrap: break-word;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
 }
 
 #message-text{
-    
     max-width: 100%;
+    font-size: 35%;
+    color: #fff;
+}
+
+#message-user{
+    max-width: 70%; /* Adjust the maximum width of the bubble */
+    padding: 20px;
+    margin:10px;
+    border-radius: 20px;
+    word-wrap: break-word;
+    border-radius: 40px 40px 40px 10px;
+    background-color: #837191;
+    align-self: flex-start;
+    
+}
+
+#message-AI{
+    max-width: 70%; /* Adjust the maximum width of the bubble */
+    padding: 10px 15px;
+    margin: 10px;
+    border-radius: 20px;
+    word-wrap: break-word;
+    border-radius: 40px 40px 10px 40px;
+    background-color: #7b48a4;
+    align-self: flex-end;
+    
 }
   
