login, home files -> move shared logic to sharedjs

--- a/react/src/Home.scss
+++ b/react/src/Home.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     margin: 0 auto;
+    margin-bottom:50px;
     padding: 20px 20px 30px 20px;
     width: 50%;
     background-color:rgba(39, 22, 49, 0.667);
