refactoring, adding image to send btn (not done)

--- a/react/src/static/Home.scss
+++ b/react/src/static/Home.scss
@@ -32,7 +32,7 @@
 }
 
 .chat-top-bar{
-    background-color:rgba(39, 22, 49, 0.667);
+    background-color:#271631aa;
     border-radius: 50px 50px 0px 0px;
     width: 50%;
     margin: 0 auto;
@@ -107,6 +107,10 @@
     border-radius: 40px 40px 10px 40px;
     background-color: #7b48a4;
     align-self: flex-end;
+    
+}
+
+#send-icon{
     
 }
   
