--- a/react/src/static/Home.scss
+++ b/react/src/static/Home.scss
@@ -22,7 +22,7 @@
 .submit-button{
     opacity: 50%;
     border-radius: 50%;
-    padding:18px;
+    padding: 10px;
     outline: none;
     border: none;
 }
@@ -58,8 +58,9 @@
 }
 
 ::-webkit-scrollbar {
-    width: 20px;
-    padding:0px;
+    width: 10px;
+    
+    
 }
  
 ::-webkit-scrollbar-track {
@@ -88,7 +89,7 @@
 
 #message-user{
     max-width: 70%; /* Adjust the maximum width of the bubble */
-    padding: 20px;
+    padding: 10px 15px;
     margin:10px;
     border-radius: 20px;
     word-wrap: break-word;
@@ -107,10 +108,9 @@
     border-radius: 40px 40px 10px 40px;
     background-color: #7b48a4;
     align-self: flex-end;
-    
 }
 
 #send-icon{
-    
+    padding-top: 1px;
+    padding-right: 1px;
 }
-  
