sticking typing indicator to bottom left

--- a/react/src/static/Home.scss
+++ b/react/src/static/Home.scss
@@ -47,7 +47,9 @@
 //chatbox
 
 .chat-box{
-    height:80%;
+    display: flex;
+    flex-direction: column;
+    height:100%;
     width: 50%;
     background-color:rgba(65, 37, 82, 0.667);
     overflow-y: hidden;
@@ -55,6 +57,10 @@
     padding: 20px;
     overflow-y: scroll;
     
+}
+.elipses{
+    align-self: flex-start;
+    margin-top: auto;
 }
 
 ::-webkit-scrollbar {
