--- a/react/src/static/Home.scss
+++ b/react/src/static/Home.scss
@@ -96,6 +96,11 @@
     
 }
 
+#profile-ai img, #profile-user img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* or "contain" depending on your preference */
+}
 
 #div-ai{
     display: flex;
