typing indicator (WIP), fixing order of init. msg

--- a/react/src/static/Home.scss
+++ b/react/src/static/Home.scss
@@ -54,7 +54,7 @@
   background-color:rgba(65, 37, 82, 0.667);
   overflow-y: hidden;
   margin: 0 auto;
-  padding: 20px;
+  padding: 20px 20px  0px 20px;
   overflow-y: scroll;
     
 }
@@ -203,4 +203,55 @@
 @keyframes overall-scale {
   0%, 95% { transform: scale(0); }
   5%, 90% { transform: scale(1); }
+}
+
+//typing indicator
+
+:root{
+  --bg-color:#36393F;
+  --bg-msg:#40444B;
+  --msg-color:#656F6B;
+  --loader-main:#DCDDDE;
+  --loader-bg:#8e9297;
+}
+
+
+.wrapper{
+  font-family: 'Dongle', sans-serif;
+  font-size: 25px;
+  align-self: flex-end;
+  
+}
+
+.loader{
+  display: flex;
+  align-items: center;
+  color:var(--loader-main);
+  font-size: 18px;
+  font-weight: 700;
+}
+.loader > span{
+  height: 6px;
+  width: 6px;
+  margin: 0.3rem 0 0.3rem .2rem;
+  background-color: var(--loader-bg);
+  border-radius:50%;
+
+}
+.loader span:nth-child(3){
+  margin-right:0.3rem;
+  margin-left: .2rem;
+  animation:blink 1s ease-in-out .66s infinite;
+}
+.loader span:nth-child(2){
+    animation:blink 1s ease-in-out .33s infinite;
+}
+.loader span:nth-child(1){  
+  animation:blink 1s ease-in-out infinite;
+}
+@keyframes blink{
+  50%{
+    background-color: var(--loader-main);
+    transform: scale(1.2);
+  }
 }
