--- a/react/src/static/Home.scss
+++ b/react/src/static/Home.scss
@@ -134,6 +134,14 @@
   display: flex;
   justify-content: flex-start;
   align-items: flex-end;
+  margin-left: 10px;
+}
+
+#playlist-element{
+  border-radius: 30px 30px 30px 10px;
+  width: 100%;
+  height: 352px;
+  border: none;
 }
 
 #playlist-display{
